OpenShift-k8s/k8s/overlays/dev-openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    pod-security.kubernetes.io/enforce: restricted
