OpenShift-k8s/k8s/overlays/dev-openshift/route-beer.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: beer
  labels:
    app: beer
spec:
  to:
    kind: Service
    name: beer
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
